change scale and font size to stop iOS zoom on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,7 @@ display: inline-block;
 input{
 padding: 4px 15px 4px 5px;
 background-color: #cbd8cf;
+font-size: 16px;
 }
 
 #button{
